--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Rocket Patrol</title>
+    <title>TRAILMIX</title>
     <style>
         body {
             background-color: white;
@@ -13,6 +13,8 @@
 </head>
 <body>
     <script src = "./lib/phaser.js"></script>
+    <script src = "./src/prefab/Player.js"></script>
+    <script src = "./src/scenes/Play.js"></script>
     <script src = "./src/main.js"></script>
 </body>
 </html>
