--- a/index.html
+++ b/index.html
@@ -14,7 +14,9 @@
 <body>
     <script src = "./lib/phaser.js"></script>
     <script src = "./src/prefab/Player.js"></script>
-    <script src = "./src/scenes/Play.js"></script>
+    <script src = "./src/scenes/Menu.js"></script>
+    <script src = "./src/scenes/Level1.js"></script>
+    <script src = "./src/scenes/Level2.js"></script>
     <script src = "./src/main.js"></script>
 </body>
 </html>
