--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
 <body>
     <script src = "./lib/phaser.js"></script>
     <script src = "./src/prefab/Player.js"></script>
+    <script src = "./src/prefab/MixObj.js"></script>
     <script src = "./src/scenes/Menu.js"></script>
     <script src = "./src/scenes/Level1.js"></script>
     <script src = "./src/scenes/Level2.js"></script>
