Animation State Machine added to player

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 </head>
 <body>
     <script src = "./lib/phaser.js"></script>
+    <script src = "./lib/StateMachine.js"></script>
     <script src = "./src/prefab/Player.js"></script>
     <script src = "./src/prefab/MixObj.js"></script>
     <script src = "./src/scenes/Menu.js"></script>
