Add Loading Screen Scene that preload assets

--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
     <script src = "./lib/StateMachine.js"></script>
     <script src = "./src/prefab/Player.js"></script>
     <script src = "./src/prefab/MixObj.js"></script>
+    <script src = "./src/scenes/Preload.js"></script>
     <script src = "./src/scenes/Menu.js"></script>
     <script src = "./src/scenes/Level1.js"></script>
     <script src = "./src/scenes/Level2.js"></script>
