--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
     <script src = "./src/prefab/MixObj.js"></script>
     <script src = "./src/scenes/Preload.js"></script>
     <script src = "./src/scenes/Menu.js"></script>
+    <script src = "./src/scenes/Pause.js"></script>
     <script src = "./src/scenes/Level1.js"></script>
     <script src = "./src/scenes/Level2.js"></script>
     <script src = "./src/main.js"></script>
