Tilemap level loading implemented

--- a/index.html
+++ b/index.html
@@ -19,8 +19,7 @@
     <script src = "./src/scenes/Preload.js"></script>
     <script src = "./src/scenes/Menu.js"></script>
     <script src = "./src/scenes/Pause.js"></script>
-    <script src = "./src/scenes/Level1.js"></script>
-    <script src = "./src/scenes/Level2.js"></script>
+    <script src = "./src/scenes/PlayTile.js"></script>
     <script src = "./src/main.js"></script>
 </body>
 </html>
