--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
     <script src = "./lib/StateMachine.js"></script>
     <script src = "./src/prefab/Player.js"></script>
     <script src = "./src/prefab/MixObj.js"></script>
+    <script src = "./src/prefab/SignObj.js"></script>
     <script src = "./src/scenes/Preload.js"></script>
     <script src = "./src/scenes/Menu.js"></script>
     <script src = "./src/scenes/Pause.js"></script>
