--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
     <script src = "./src/prefab/MixObj.js"></script>
     <script src = "./src/prefab/SignObj.js"></script>
     <script src = "./src/scenes/Preload.js"></script>
+    <script src = "./src/scenes/Credits.js"></script>
     <script src = "./src/scenes/Menu.js"></script>
     <script src = "./src/scenes/Pause.js"></script>
     <script src = "./src/scenes/PlayTile.js"></script>
