--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
     <script src = "./src/prefab/Player.js"></script>
     <script src = "./src/prefab/MixObj.js"></script>
     <script src = "./src/prefab/SignObj.js"></script>
+    <script src = "./src/prefab/AnimParticle.js"></script>
     <script src = "./src/scenes/Preload.js"></script>
     <script src = "./src/scenes/Credits.js"></script>
     <script src = "./src/scenes/Menu.js"></script>
