--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
     <script src = "./src/prefab/AnimParticle.js"></script>
     <script src = "./src/scenes/Preload.js"></script>
     <script src = "./src/scenes/Credits.js"></script>
+    <script src = "./src/scenes/Ending.js"></script>
     <script src = "./src/scenes/Controls.js"></script>
     <script src = "./src/scenes/Menu.js"></script>
     <script src = "./src/scenes/Pause.js"></script>
